# hatch_generator

./: CMakeLists.txt  Doxyfile  README.md  hatch_generator.cpp  hatch_generator.hpp  main.cpp  math_linear.cpp  math_linear.hpp  session.cpp  session.hpp  shape.cpp  shape.hpp
doc/html/: annotated.html  annotated_dup.js  class_hatch_generator-members.html  class_hatch_generator.html  class_hatch_generator.js  classes.html  classsession_1_1cmd_handler-members.html  classsession_1_1cmd_handler.html  classsession_1_1cmd_handler.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hatch__generator_8hpp.html  hatch__generator_8hpp.js  hatch__generator_8hpp_source.html  index.html  main_8cpp.html  math__linear_8hpp.html  math__linear_8hpp.js  math__linear_8hpp_source.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  namespacesession.html  namespacesession.js  navtreedata.js  navtreeindex0.js  session_8hpp.html  session_8hpp.js  session_8hpp_source.html  (+12 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  (+4 more)
